Bug 1426594 - Should convert rect from TransformFramePointToTextChild to device pixel r=longsonr

We need device pixel, but TransformFramePointToTextChild returns in css pixel,
thus a scaling is necessary.

Differential Revision: https://phabricator.services.mozilla.com/D27322